RBAC/usermgm/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgm
  labels:
    app.kubernetes.io/instance: usermgm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: usermgm
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: usermgm
    spec:
      containers:
      - name: usermgm
        image: IMAGE_TAG 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 30m
            memory: 50Mi
